Bug 1836805: test(webgpu): adjust Windows CTS expectations to cover recently observed timeout-related outcomes r=webgpu-reviewers,jimb
Differential Revision: https://phabricator.services.mozilla.com/D187156

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/13/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/13/cts.https.html.ini
@@ -8,6 +8,8 @@
 
 
 [cts.https.html?q=webgpu:api,validation,createTexture:mipLevelCount,format:*]
+  expected: [OK, TIMEOUT]
+
   [:dimension="2d";format="rg16float"]
 
   [:dimension="2d";format="rgba8unorm"]
@@ -237,169 +239,251 @@
   [:dimension="3d";format="rgba32float"]
 
   [:dimension="2d";format="r16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
 [cts.https.html?q=webgpu:api,validation,createTexture:mipLevelCount,bound_check,bigger_than_integer_bit_width:*]
 
 [cts.https.html?q=webgpu:api,validation,createTexture:texture_size,3d_texture,uncompressed_format:*]
 
 [cts.https.html?q=webgpu:api,validation,createTexture:texture_size,default_value_and_smallest_size,uncompressed_format:*]
+  expected: [OK, TIMEOUT]
+
   [:dimension="2d";format="rg8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bgra8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bgra8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgb10a2unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg11b10ufloat"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgb9e5ufloat"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth16unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="stencil8"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth24plus"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth24plus-stencil8"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth32float-stencil8"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="bgra8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="bgra8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgb10a2unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg11b10ufloat"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgb9e5ufloat"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
 [cts.https.html?q=webgpu:api,validation,createBindGroupLayout:max_dynamic_buffers:*]
 
@@ -433,268 +517,400 @@
 
 
 [cts.https.html?q=webgpu:api,validation,createTexture:sampleCount,valid_sampleCount_with_other_parameter_varies:*]
+  expected: [OK, TIMEOUT]
 
   [:dimension="1d";format="rgba32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="r32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bgra8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bgra8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgb10a2unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg11b10ufloat"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgb9e5ufloat"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rg32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="rgba32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth16unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="stencil8"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth24plus"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth24plus-stencil8"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="depth32float-stencil8"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc1-rgba-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc1-rgba-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc2-rgba-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc2-rgba-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc3-rgba-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc3-rgba-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc4-r-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc4-r-snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc5-rg-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc5-rg-snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc6h-rgb-ufloat"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc6h-rgb-float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc7-rgba-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="bc7-rgba-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="etc2-rgb8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="etc2-rgb8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="etc2-rgb8a1unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="etc2-rgb8a1unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="etc2-rgba8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="etc2-rgba8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="eac-r11unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="eac-r11snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="eac-rg11unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="eac-rg11snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-4x4-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-4x4-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-5x4-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-5x4-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-5x5-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-5x5-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-6x5-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-6x5-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-6x6-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-6x6-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-8x5-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-8x5-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-8x6-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-8x6-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-8x8-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-8x8-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-10x5-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-10x5-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-10x6-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-10x6-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-10x8-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-10x8-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-10x10-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-10x10-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-12x10-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-12x10-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-12x12-unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="2d";format="astc-12x12-unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="r32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8snorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba8sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="bgra8unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="bgra8unorm-srgb"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgb10a2unorm"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg11b10ufloat"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgb9e5ufloat"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rg32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba16uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba16sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba16float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba32uint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba32sint"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:dimension="3d";format="rgba32float"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
 [cts.https.html?q=webgpu:api,validation,createTexture:sample_count,1d_2d_array_3d:*]
 
