--- a/testing/web-platform/mozilla/meta/webgpu/chunked/31/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/31/cts.https.html.ini
@@ -541,7 +541,7 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize_rhs=3]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";vectorize_rhs=4]
     expected: FAIL
@@ -623,7 +623,7 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize_lhs=3]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";vectorize_lhs=4]
     expected: FAIL
