--- a/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
@@ -28,7 +28,7 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize="_undef_"]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=2]
     expected: FAIL
@@ -40,7 +40,7 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize="_undef_"]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=2]
     expected: FAIL
@@ -87,7 +87,7 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -166,7 +166,7 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -265,7 +265,7 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -344,7 +344,7 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -383,7 +383,7 @@
     expected: FAIL
 
   [:inputSource="uniform";overload="vec3"]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";overload="vec4"]
     expected: FAIL
@@ -471,7 +471,7 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
