--- a/testing/web-platform/mozilla/meta/webgpu/chunked/36/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/36/cts.https.html.ini
@@ -16,7 +16,7 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -167,7 +167,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if (os == "win") and not debug: [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -261,7 +263,7 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -359,7 +361,7 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -368,7 +370,7 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -393,7 +395,7 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
