--- a/testing/web-platform/mozilla/meta/webgpu/chunked/37/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/37/cts.https.html.ini
@@ -212,7 +212,7 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
