--- a/testing/web-platform/mozilla/meta/webgpu/chunked/38/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/38/cts.https.html.ini
@@ -215,7 +215,7 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
