--- a/testing/web-platform/mozilla/meta/webgpu/chunked/40/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/40/cts.https.html.ini
@@ -164,7 +164,7 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -440,7 +440,7 @@
     expected: FAIL
 
   [:inputSource="uniform";component="b";overload="vec2"]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";component="b";overload="vec3"]
     expected: FAIL
