--- a/testing/web-platform/mozilla/meta/webgpu/chunked/41/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/41/cts.https.html.ini
@@ -121,9 +121,10 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize="_undef_"]
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -132,6 +133,7 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize="_undef_"]
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=2]
     expected: FAIL
@@ -296,10 +298,10 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize="_undef_"]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -308,10 +310,10 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize="_undef_"]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -323,7 +325,7 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -350,7 +352,7 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -368,7 +370,7 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
