--- a/testing/web-platform/mozilla/meta/webgpu/chunked/42/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/42/cts.https.html.ini
@@ -3,6 +3,49 @@
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,textureGather:sampled_array_2d_coords:*]
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,textureLoad:sampled_3d:*]
+  expected: [OK, TIMEOUT]
+
+  [:C="u32";coords="z-min-wrap";level="numlevels-1"]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-min-wrap";level="numlevels"]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-min-boundary";level=-1]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-min-boundary";level=0]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-min-boundary";level="numlevels-1"]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-min-boundary";level="numlevels"]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-max-wrap";level=-1]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-max-wrap";level=0]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-max-wrap";level="numlevels-1"]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-max-wrap";level="numlevels"]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-max-boundary";level=-1]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-max-boundary";level=0]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-max-boundary";level="numlevels-1"]
+    expected: [PASS, TIMEOUT, NOTRUN]
+
+  [:C="u32";coords="z-max-boundary";level="numlevels"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,textureGather:depth_3d_coords:*]
 
