--- a/testing/web-platform/mozilla/meta/webgpu/chunked/46/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/46/cts.https.html.ini
@@ -510,6 +510,10 @@
       if os == "win": FAIL
 
 [cts.https.html?q=webgpu:shader,execution,padding:struct_nested:*]
+  [:]
+    expected:
+      if os == "win": [PASS, FAIL]
+
 
 [cts.https.html?q=webgpu:shader,execution,memory_model,weak:2_plus_2_write:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
