--- a/testing/web-platform/mozilla/meta/webgpu/chunked/49/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/49/cts.https.html.ini
@@ -212,6 +212,8 @@
   disabled: true
 
 [cts.https.html?q=webgpu:shader,validation,shader_io,builtins:stage_inout:*]
+  expected: [OK, TIMEOUT]
+
   [:name="vertex_index";stage="vertex";io="in";type="u32";use_struct=true;target_stage="vertex";target_io="out"]
     expected:
       if os == "win": FAIL
@@ -921,16 +923,22 @@
       if os == "win": FAIL
 
   [:name="frag_depth";stage="fragment";io="out";type="f32";use_struct=true;target_stage="";target_io="in"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:name="frag_depth";stage="fragment";io="out";type="f32";use_struct=true;target_stage="";target_io="out"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:name="frag_depth";stage="fragment";io="out";type="f32";use_struct=true;target_stage="fragment";target_io="out"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:name="frag_depth";stage="fragment";io="out";type="f32";use_struct=false;target_stage="fragment";target_io="out"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:name="local_invocation_id";stage="compute";io="in";type="vec3%3Cu32%3E";use_struct=true;target_stage="";target_io="in"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:name="local_invocation_id";stage="compute";io="in";type="vec3%3Cu32%3E";use_struct=true;target_stage="";target_io="out"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
 [cts.https.html?q=webgpu:shader,validation,parse,var_and_let:initializer_type:*]
   [:variableOrConstant="var"]
@@ -1000,6 +1008,8 @@
 
 
 [cts.https.html?q=webgpu:shader,validation,shader_io,interpolate:type_and_sampling:*]
+  expected: [OK, TIMEOUT]
+
   [:stage="vertex";io="in";use_struct=true;type="";sampling="center"]
     expected:
       if os == "win": FAIL
@@ -2115,20 +2125,28 @@
   [:stage="fragment";io="in";use_struct=false;type="perspective";sampling="sample"]
 
   [:stage="vertex";io="out";use_struct=true;type="perspective";sampling=""]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:stage="vertex";io="out";use_struct=true;type="perspective";sampling="center"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:stage="vertex";io="out";use_struct=true;type="perspective";sampling="centroid"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:stage="vertex";io="out";use_struct=true;type="perspective";sampling="sample"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:stage="vertex";io="out";use_struct=true;type="linear";sampling=""]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:stage="vertex";io="out";use_struct=true;type="linear";sampling="center"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:stage="vertex";io="out";use_struct=true;type="linear";sampling="centroid"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:stage="vertex";io="out";use_struct=true;type="linear";sampling="sample"]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
 [cts.https.html?q=webgpu:shader,validation,resource_interface,bindings:single_entry_point:*]
   [:stage="compute";a_kind="storage";b_kind="texture_3d";a_group=0;b_group=0;a_binding=0;b_binding=0;usage="direct"]
