--- a/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
@@ -174,7 +174,7 @@
 
   [:format="depth32float-stencil8";unclippedDepth=true;writeDepth=false;multisampled=true]
     expected:
-      if os == "win": FAIL
+      if os == "win": [FAIL, PASS]
 
   [:format="depth32float-stencil8";unclippedDepth=true;writeDepth=true;multisampled=false]
     expected: FAIL
