--- a/testing/web-platform/mozilla/meta/webgpu/chunked/8/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/8/cts.https.html.ini
@@ -27,7 +27,7 @@
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,correctness:max_buffers_and_attribs:*]
   [:format="uint8x4"]
-    expected: FAIL
+      if os == "win": [FAIL, PASS]
 
   [:format="sint8x2"]
     expected: FAIL
