--- a/testing/web-platform/mozilla/meta/webgpu/chunked/19/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/19/cts.https.html.ini
@@ -80,13 +80,13 @@
 
 
 [cts.https.html?q=webgpu:api,validation,error_scope:current_scope:*]
+  expected: [OK, TIMEOUT]
+
   [:errorFilter="out-of-memory";stackDepth=100000]
-    expected:
-      if debug: [PASS, TIMEOUT]
+    expected: [PASS, TIMEOUT]
 
   [:errorFilter="validation";stackDepth=100000]
-    expected:
-      if debug: [PASS, TIMEOUT]
+    expected: [PASS, TIMEOUT]
 
 [cts.https.html?q=webgpu:api,validation,error_scope:balanced_siblings:*]
 
