--- a/testing/web-platform/mozilla/meta/webgpu/chunked/2/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/2/cts.https.html.ini
@@ -1,6 +1,8 @@
 [cts.https.html?q=webgpu:api,operation,command_buffer,basic:empty:*]
 
 [cts.https.html?q=webgpu:api,operation,command_buffer,copyTextureToTexture:color_textures,compressed,non_array:*]
+  disabled:
+    if os == "win": https://bugzilla.mozilla.org/show_bug.cgi?id=1844779
 
 [cts.https.html?q=webgpu:api,operation,command_buffer,copyTextureToTexture:copy_depth_stencil:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -42,6 +44,8 @@
   disabled: true
 
 [cts.https.html?q=webgpu:api,operation,command_buffer,copyTextureToTexture:color_textures,compressed,array:*]
+  disabled:
+    if os == "win": https://bugzilla.mozilla.org/show_bug.cgi?id=1844779
 
 [cts.https.html?q=webgpu:api,operation,command_buffer,image_copy:origins_and_extents:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
