--- a/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
@@ -76,26 +76,37 @@
   [:boundary="pass";read={"op":"sample","in":"compute-pass-encoder"};write={"op":"storage","in":"compute-pass-encoder"}]
 
   [:boundary="dispatch";read={"op":"sample","in":"compute-pass-encoder"};write={"op":"storage","in":"compute-pass-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2t-copy","in":"command-encoder"};write={"op":"attachment-store","in":"command-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2t-copy","in":"command-encoder"};write={"op":"storage","in":"render-bundle-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"sample","in":"compute-pass-encoder"};write={"op":"write-texture","in":"queue"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2b-copy","in":"command-encoder"};write={"op":"attachment-resolve","in":"command-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2b-copy","in":"command-encoder"};write={"op":"storage","in":"render-pass-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2b-copy","in":"command-encoder"};write={"op":"t2t-copy","in":"command-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2b-copy","in":"command-encoder"};write={"op":"storage","in":"render-bundle-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2t-copy","in":"command-encoder"};write={"op":"write-texture","in":"queue"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2t-copy","in":"command-encoder"};write={"op":"storage","in":"compute-pass-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2t-copy","in":"command-encoder"};write={"op":"storage","in":"render-pass-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";read={"op":"t2b-copy","in":"command-encoder"};write={"op":"storage","in":"compute-pass-encoder"}]
 
@@ -253,6 +264,7 @@
   [:boundary="queue-op";first={"op":"b2t-copy","in":"command-encoder"};second={"op":"write-texture","in":"queue"}]
 
   [:boundary="queue-op";first={"op":"write-texture","in":"queue"};second={"op":"t2t-copy","in":"command-encoder"}]
+    expected: [PASS, FAIL]
 
   [:boundary="queue-op";first={"op":"b2t-copy","in":"command-encoder"};second={"op":"t2t-copy","in":"command-encoder"}]
 
@@ -296,7 +308,7 @@
     expected: [TIMEOUT, NOTRUN, PASS]
 
   [:boundary="queue-op";readOp="b2t-copy";readContext="command-encoder";writeOp="storage";writeContext="compute-pass-encoder"]
-    expected: [TIMEOUT, NOTRUN, PASS, FAIL]
+    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="b2t-copy";readContext="command-encoder";writeOp="storage";writeContext="render-pass-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -326,7 +338,7 @@
     expected: [TIMEOUT, NOTRUN, PASS]
 
   [:boundary="queue-op";readOp="storage-read";readContext="compute-pass-encoder";writeOp="b2b-copy";writeContext="command-encoder"]
-    expected: [TIMEOUT, NOTRUN, FAIL]
+    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="storage-read";readContext="compute-pass-encoder";writeOp="t2b-copy";writeContext="command-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -338,7 +350,7 @@
     expected: [TIMEOUT, NOTRUN, PASS]
 
   [:boundary="queue-op";readOp="storage-read";readContext="render-pass-encoder";writeOp="b2b-copy";writeContext="command-encoder"]
-    expected: [TIMEOUT, NOTRUN, FAIL]
+    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="storage-read";readContext="render-pass-encoder";writeOp="t2b-copy";writeContext="command-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -635,7 +647,7 @@
     expected: [TIMEOUT, NOTRUN, PASS]
 
   [:boundary="queue-op";readOp="b2t-copy";readContext="command-encoder";writeOp="storage";writeContext="compute-pass-encoder"]
-    expected: [TIMEOUT, NOTRUN, FAIL]
+    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="b2t-copy";readContext="command-encoder";writeOp="storage";writeContext="render-pass-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -665,7 +677,7 @@
     expected: [TIMEOUT, NOTRUN, PASS]
 
   [:boundary="queue-op";readOp="storage-read";readContext="compute-pass-encoder";writeOp="b2b-copy";writeContext="command-encoder"]
-    expected: [TIMEOUT, NOTRUN, FAIL]
+    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="storage-read";readContext="compute-pass-encoder";writeOp="t2b-copy";writeContext="command-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -677,7 +689,7 @@
     expected: [TIMEOUT, NOTRUN, PASS]
 
   [:boundary="queue-op";readOp="storage-read";readContext="render-pass-encoder";writeOp="b2b-copy";writeContext="command-encoder"]
-    expected: [TIMEOUT, NOTRUN, FAIL]
+    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="storage-read";readContext="render-pass-encoder";writeOp="t2b-copy";writeContext="command-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -949,7 +961,7 @@
     expected: [TIMEOUT, NOTRUN, PASS]
 
   [:boundary="queue-op";writeOps=["write-buffer","storage"\];contexts=["queue","render-bundle-encoder"\]]
-    expected: [TIMEOUT, NOTRUN, FAIL]
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";writeOps=["b2b-copy","write-buffer"\];contexts=["command-encoder","queue"\]]
     expected: [TIMEOUT, NOTRUN, PASS]
@@ -970,7 +982,7 @@
     expected: [TIMEOUT, NOTRUN, PASS]
 
   [:boundary="queue-op";writeOps=["b2b-copy","storage"\];contexts=["command-encoder","compute-pass-encoder"\]]
-    expected: [TIMEOUT, NOTRUN, PASS, FAIL]
+    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";writeOps=["b2b-copy","storage"\];contexts=["command-encoder","render-pass-encoder"\]]
     expected: [TIMEOUT, NOTRUN, FAIL]
