--- a/testing/web-platform/mozilla/meta/webgpu/chunked/51/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/51/cts.https.html.ini
@@ -446,6 +446,8 @@
   disabled: true
 
 [cts.https.html?q=webgpu:web_platform,copyToTexture,canvas:color_space_conversion:*]
+  expected: [OK, TIMEOUT]
+
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgb10a2unorm";dstPremultiplied=false;srcDoFlipYDuringCopy=true]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgb10a2unorm";dstPremultiplied=false;srcDoFlipYDuringCopy=false]
@@ -467,14 +469,19 @@
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgba32float";dstPremultiplied=false;srcDoFlipYDuringCopy=false]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="bgra8unorm-srgb";dstPremultiplied=true;srcDoFlipYDuringCopy=false]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="bgra8unorm-srgb";dstPremultiplied=false;srcDoFlipYDuringCopy=true]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="bgra8unorm-srgb";dstPremultiplied=false;srcDoFlipYDuringCopy=false]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgb10a2unorm";dstPremultiplied=true;srcDoFlipYDuringCopy=true]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
   [:srcColorSpace="display-p3";dstColorSpace="srgb";dstColorFormat="rgb10a2unorm";dstPremultiplied=true;srcDoFlipYDuringCopy=false]
+    expected: [PASS, TIMEOUT, NOTRUN]
 
 [cts.https.html?q=webgpu:web_platform,canvas,readbackFromWebGPUCanvas:onscreenCanvas,uploadToWebGL:*]
   [:format="bgra8unorm";alphaMode="opaque";webgl="webgl";upload="texImage2D"]
